<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!--Aquí se almacenan todos los elementos -->
    <Button
        android:id="@+id/cero_button"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:text="@string/texto_cero_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rounded_corners"
        />
    <Button
        android:id="@+id/igual_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_igual_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corners"
        />
    <Button
        android:id="@+id/punto_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_punto_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/igual_button"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corners"
        />

    <Button
        android:id="@+id/mas_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_mas_button"
        app:layout_constraintBottom_toBottomOf="@+id/igual_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corners"
        />

    <Button
        android:id="@+id/menos_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_menos_button"
        app:layout_constraintBottom_toBottomOf="@+id/mas_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corners"
        />
    <Button
        android:id="@+id/por_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_por_button"
        app:layout_constraintBottom_toBottomOf="@+id/menos_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corners"
        />
    <Button
        android:id="@+id/div_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_div_button"
        app:layout_constraintBottom_toBottomOf="@+id/por_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corners"

        />
    <Button
        android:id="@+id/tres_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_tres_button"
        app:layout_constraintBottom_toBottomOf="@+id/punto_button"
        app:layout_constraintEnd_toEndOf="@+id/mas_button"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/rounded_corners"
        />
    <Button
        android:id="@+id/seis_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_seis_button"
        app:layout_constraintBottom_toBottomOf="@+id/tres_button"
        app:layout_constraintEnd_toEndOf="@+id/menos_button"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/rounded_corners"
        />
    <Button
        android:id="@+id/nueve_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_nueve_button"
        app:layout_constraintBottom_toBottomOf="@+id/seis_button"
        app:layout_constraintEnd_toEndOf="@+id/por_button"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/rounded_corners"
        />
    <Button
        android:id="@+id/porcentaje_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_porcentaje_button"
        app:layout_constraintBottom_toBottomOf="@+id/nueve_button"
        app:layout_constraintEnd_toEndOf="@+id/div_button"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/rounded_corners"
        />
    <Button
        android:id="@+id/uno_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_uno_button"
        app:layout_constraintBottom_toBottomOf="@+id/cero_button"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rounded_corners"
        />
    <Button
        android:id="@+id/dos_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_dos_button"
        app:layout_constraintBottom_toBottomOf="@+id/cero_button"
        app:layout_constraintStart_toStartOf="@id/uno_button"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="100dp"
        android:background="@drawable/rounded_corners"
        />
    <Button
        android:id="@+id/cuatro_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_cuatro_button"
        app:layout_constraintBottom_toBottomOf="@+id/uno_button"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rounded_corners"
        />
    <Button
        android:id="@+id/cinco_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_cinco_button"
        app:layout_constraintBottom_toBottomOf="@+id/dos_button"
        app:layout_constraintStart_toStartOf="@id/cuatro_button"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="100dp"
        android:background="@drawable/rounded_corners"
        />
    <Button
        android:id="@+id/siete_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_siete_button"
        app:layout_constraintBottom_toBottomOf="@+id/cuatro_button"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rounded_corners"
        />
    <Button
        android:id="@+id/ocho_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_ocho_button"
        app:layout_constraintBottom_toBottomOf="@+id/cinco_button"
        app:layout_constraintStart_toStartOf="@id/siete_button"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="100dp"
        android:background="@drawable/rounded_corners"
        />
    <Button
        android:id="@+id/allClean_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_allClean_button"
        app:layout_constraintBottom_toBottomOf="@+id/siete_button"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/doradito"
        />
    <Button
        android:id="@+id/masMenos_button"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/texto_masMenos_button"
        app:layout_constraintBottom_toBottomOf="@+id/ocho_button"
        app:layout_constraintStart_toStartOf="@id/allClean_button"
        android:textSize="20sp"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="100dp"
        android:background="@drawable/rounded_corners"
        />
    <TextView
        android:id="@+id/resultado_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/div_button"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/texto_resultado_textview"

        android:textSize="30dp"
        android:fontFamily="serif"
        android:textAlignment="textEnd"
    />

</androidx.constraintlayout.widget.ConstraintLayout>